set_cmake_folder_context(TARGET_FOLDER_NAME)

option(DAQSIMULATOR_ENABLE_SIMULATOR_APP "Enable device simulator application" OFF)

if (DAQSIMULATOR_ENABLE_SIMULATOR_APP AND
    NOT (DAQMODULES_REF_DEVICE_MODULE AND
        DAQMODULES_REF_FB_MODULE AND
        DAQMODULES_OPENDAQ_SERVER_MODULE AND
        OPENDAQ_ENABLE_NATIVE_STREAMING AND
        OPENDAQ_ENABLE_OPCUA))
        message(WARNING "DAQMODULES_REF_DEVICE_MODULE, DAQMODULES_REF_FB_MODULE, OPENDAQ_ENABLE_NATIVE_STREAMING, OPENDAQ_ENABLE_OPCUA and DAQMODULES_OPENDAQ_SERVER_MODULE must be ON to enable simulator application")
endif()

if (DAQSIMULATOR_ENABLE_SIMULATOR_APP AND
        DAQMODULES_REF_DEVICE_MODULE AND
        DAQMODULES_REF_FB_MODULE AND
        DAQMODULES_OPENDAQ_SERVER_MODULE AND
        OPENDAQ_ENABLE_NATIVE_STREAMING AND
        OPENDAQ_ENABLE_OPCUA)
    add_subdirectory(simulator_app)
endif()
